# NDID

./: .gitignore  README.md  main.py  pyproject.toml
data/splits/: test_ids.txt  train_ids.txt  val_ids.txt
embedding/: clip_embedder.py  resnet_embedder.py
evaluation/: build_airbnb_pairs.py  build_pairs.py  decision.py  evaluate_airbnb.py  evaluate_retrieval.py  extract_airbnb_signals.py  extract_signals.py  gating.py  sanity_airbnb_retrieval.py  train_decider.py
features/: phash.py
index/: build_airbnb_index.py  build_index.py  retrieve.py  retrieve_airbnb.py
scripts/: assign_split.py  build_pairs.py  compute_pair_signals.py  compute_phash.py  compute_resnet_embeddings.py  grid_search_pairwise_deprecated.py  prepare_airbnb.py  sanityChecks.py  split_dataset.py  test_clip_fallback.py  test_gating.py  test_phash_distances.py  test_retrieval.py
ui/: app.py
