[project]
name = "ndid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "imagehash>=4.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "streamlit>=1.53.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
